example/lib/src/generated/errors/errors_localization_th.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Thai (`th`).
class ErrorsLocalizationTh extends ErrorsLocalization {
  ErrorsLocalizationTh([String locale = 'th']) : super(locale);

  @override
  String get error => 'เกิดข้อผิดพลาด';

  @override
  String get unexpectedError => 'เกิดข้อผิดพลาดที่ไม่คาดคิด';

  @override
  String get bugReportSentText => 'ส่งรายงานข้อผิดพลาดเรียบร้อยแล้ว.';
}
